# MMPlayerCore

./: README.md
3rdpart/ffmpeg/include/libavutil/: ffversion.h
3rdpart/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
MMAV/: CmakeLists.txt  MMAV.h  MMAVPacket.cpp  MMAVPacketPrivate.h  MMAVReader.cpp  MMAVReaderPrivate.h
MMPlayer/: CMakeLists.txt  MMPlayer.cpp
MMThread/: CMakeLists.txt  MMThread.cpp  MMThread.h
